--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "main": "testEvent.ts",
   "dependencies": {
     "@types/acorn": "^4.0.6",
+    "@types/archiver": "^5.1.1",
     "@types/eslint": "^7.28.0",
+    "@types/fs-extra": "^9.0.13",
     "acorn": "^8.4.1",
     "archiver": "^5.3.0",
+    "dayjs": "^1.10.7",
+    "dependency-graph": "^0.11.0",
     "ffi-napi": "^4.0.3",
+    "fs-extra": "^10.0.0",
     "open": "^8.2.1",
+    "pinyin": "^2.10.2",
     "reflect-metadata": "^0.1.13",
-    "tar-fs": "^2.1.1"
+    "simple-git": "^2.45.1",
+    "tar-fs": "^2.1.1",
+    "zh_cn": "0.0.7"
   },
   "devDependencies": {
-    "@types/node": "^16.7.1",
+    "@types/node": "^16.10.1",
     "crypto-js": "^4.1.1",
     "eslint": "^7.32.0",
     "lockfile": "^1.0.4",
