--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dependency-graph": "^0.11.0",
     "ffi-napi": "^4.0.3",
     "fs-extra": "^10.0.0",
+    "lodash": "^4.17.21",
+    "mistql": "^0.4.1",
     "open": "^8.2.1",
     "pinyin": "^2.10.2",
     "reflect-metadata": "^0.1.13",
