--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2016",
     "module": "commonjs",
-    "jsx": "react",
-    "declaration": true,
-    "noEmit": true,
-    "strict": true,
-    "noUnusedLocals": false,
-    "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "baseUrl": ".",
-    "typeRoots": ["node_modules/@types"],
-    "paths": {
-      "~/*": ["./*"],
-      "*": ["*", "node_modules/*", "node_modules/@typs/node/*"]
-    },
-    "esModuleInterop": true,
-    "emitDecoratorMetadata": true
+    "target": "ES5",
+    "outDir": "bin",
+    "sourceMap": true,
+    "experimentalDecorators": true
   }
 }
