--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "archiver": "^5.3.0",
     "dayjs": "^1.10.7",
     "dependency-graph": "^0.11.0",
+    "diff": "^5.0.0",
     "ffi-napi": "^4.0.3",
     "fs-extra": "^10.0.0",
+    "json-diff": "^0.6.2",
     "lodash": "^4.17.21",
     "mistql": "^0.4.1",
     "open": "^8.2.1",
@@ -21,6 +23,7 @@
     "reflect-metadata": "^0.1.13",
     "simple-git": "^2.45.1",
     "tar-fs": "^2.1.1",
+    "typescript": "^4.5.2",
     "zh_cn": "0.0.7"
   },
   "devDependencies": {
@@ -28,7 +31,8 @@
     "crypto-js": "^4.1.1",
     "eslint": "^7.32.0",
     "lockfile": "^1.0.4",
-    "proper-lockfile": "^4.1.2"
+    "proper-lockfile": "^4.1.2",
+    "ts-node": "^10.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
