--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/fs-extra": "^9.0.13",
     "acorn": "^8.4.1",
     "archiver": "^5.3.0",
+    "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "dependency-graph": "^0.11.0",
     "diff": "^5.0.0",
@@ -24,15 +25,26 @@
     "simple-git": "^2.45.1",
     "tar-fs": "^2.1.1",
     "typescript": "^4.5.2",
-    "zh_cn": "0.0.7"
+    "ws": "^8.4.0",
+    "zh_cn": "0.0.7",
+    "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
+    "@koa/multer": "3.0.0",
+    "koa-router": "^10.1.1",
+    "routing-controllers": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^16.10.1",
+    "@types/ws": "^8.2.2",
     "crypto-js": "^4.1.1",
     "eslint": "^7.32.0",
     "lockfile": "^1.0.4",
     "proper-lockfile": "^4.1.2",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.5",
+    "@types/koa-convert": "^1.2.4",
+    "@types/koa-router": "^7.4.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
